ST/k8s/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: service-ingress
spec:
  rules:
  - host: awx.example.com
    http:
	  paths:
	  - backend:
	      serviceName: awx-service
		  servicePort: 80
  - host: awx.example.com
    http:
	  paths:
	  - backend:
	      serviceName: nginx
		  servicePort: 80
  - http:
	  paths:
	  - backend:
	      serviceName: httpd
		  servicePort: 80
